--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
             <div class="row">
                 <div class="col-lg-12">
 
-			<h2 class="page-header">Для пачатку працы крамы збіраем (прад)замоваў на суму 100 рублёў</h2>
+			<h2 class="page-header">Для пачатку працы гік-лаўкі збіраем прадзамовы на 100 рублёў</h2>
 
 			<div class="caption">
-						        <h3 class="pull-right">100 рублёў для старта</h3>
+						        <h3 class="pull-right">100 рублёў</h3>
 						        <h3>Замаўляй нішцякі!</h3>
 					</div>  
 			<div class="progress">
@@ -128,7 +128,7 @@
 
             <div class="col-md-4 portfolio-item">
 		<div class="caption">
-                                <h3 class="pull-right">2 рублі</h3>
+                                <h3 class="pull-right">10 р</h3>
                                 <h3><a href="product-1.html">Кансольныя паштоўкі</a>
                                 </h3>
                 </div>                
@@ -143,7 +143,7 @@
 
             <div class="col-md-4 portfolio-item">
 		<div class="caption">
-                                <h3 class="pull-right">$74.99</h3>
+                                <h3 class="pull-right">4 р</h3>
                                 <h3><a href="product-7.html">Роварныя налепкі</a>
                                 </h3>
                 </div>                
@@ -156,8 +156,8 @@
 
             <div class="col-md-4 portfolio-item">
 		<div class="caption">
-                                <h3 class="pull-right">$74.99</h3>
-                                <h3><a href="product-4.html">Налепкі для Смачнай Твочасці</a>
+                                <h3 class="pull-right">3 р</h3>
+                                <h3><a href="product-4.html">Налепкі для Твочасці</a>
                                 </h3>
                 </div>                
 
@@ -176,7 +176,7 @@
 
 <div class="col-md-4 portfolio-item">
 		<div class="caption">
-                                <h3 class="pull-right">$74.99</h3>
+                                <h3 class="pull-right">12 р</h3>
                                 <h3><a href="product-8.html">Сумкі Creative Commons</a>
                                 </h3>
                 </div>                
@@ -189,7 +189,7 @@
 
             <div class="col-md-4 portfolio-item">
 		<div class="caption">
-                                <h3 class="pull-right">$74.99</h3>
+                                <h3 class="pull-right">10 руб</h3>
                                 <h3><a href="product-2.html">Вікі-паштоўкі</a>
                                 </h3>
                 </div>                
@@ -202,7 +202,7 @@
 
             <div class="col-md-4 portfolio-item">
 		<div class="caption">
-                                <h3 class="pull-right">$74.99</h3>
+                                <h3 class="pull-right">2 р</h3>
                                 <h3><a href="product-5.html">Налепкі для гікаў </a>
                                 </h3>
                 </div>                
