--- a/product-3.html
+++ b/product-3.html
@@ -77,9 +77,9 @@
         <div class="row">
             <div class="col-lg-12">
 <div class="caption-product">
-		<h1 class="pull-right">100 руб.</h1>
+		<h1 class="pull-right">10 руб.</h1>
                 <h1 class="page-header">Эксперыментальныя паштоўкі 
-
+		<small>камплект 10 штук</small>
                 </h1>
 </div>
             </div>
