tos: question about colors added

--- a/tos.html
+++ b/tos.html
@@ -140,6 +140,9 @@
 	<li>ваш кантакт (напрыклад, тэлефон),</li>
 	<li>адрас (калі чакаеце атрымаць тавар па пошце).</li>
 </ol>
+
+<h4>Чаму колеры на друкаваных налепках адрозніваюцца ад колераў на макетах?</h4>
+<p>Такое можа здарацца, таму што мы ствараем макеты ў свабодных графічных прыладах, яны збольшага працуюць з RGB гамай, а друк робіцца са CMYK гамы.</p>
                
 
             </div>
