cc bags photos new size added and linked to product8 page and index page

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 </div>                
 
                 <a href="product-4.html">
-                    <img class="img-responsive" src="http://placehold.it/750x500" alt="">
+                    <img class="img-responsive" src="images/products/pr8/cc_sumki_5.jpg" alt="">
                 </a>
 
             </div>
