added ne description, see also blok and fixed link on index page

--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
             <div class="col-md-6">               
                 <p>Мы - гік-лаўка! Калі вы штосці замаўляеце у нас, магчыма вы ведаеце, што гэта не наш <a href="https://falanster.by" target="_blank">асноўны занятак</a>. Прыбытак лаўкі ідзе на падтрыманне дзейнасці Фаланстэра. Калі ласка насалоджвайцеся нашымі няшнымі прадуктамі і часам вяртайцеся за навінкамі ў гік-лаўку.
 <p>
-Увесь наш асартымент магчыма зрабіць самастойна, скачаўшы зыходнікі з гітхаба.</p>
+Увесь асартымент магчыма зрабіць самастойна, скачаўшы зыходнікі з гітхаба, і праявіўшы трохі знаходлівасці. Або проста замаўляйце гікаўскую атрыбутыку прама зараз.</p>
 <p>
 Не бойцеся! Вы ў харашых руках.</p>
 <p>
