--- a/product-1.html
+++ b/product-1.html
@@ -96,9 +96,19 @@
             </div>
 
             <div class="col-md-4">
-
+		<h3>Гісторыя і апісанне</h3>
                 <p>Для шчыра закаханых у кансоль і open source.</p>
-		<h4><a href="https://github.com/svetit/2016-postcards-console" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
+		<p>Кансольныя паштоўкі паказваюць, што код і каманды - гэта інтрументы змены свету і перш за ўсё сябе.</p>
+		<p>Уяві, кансоль - гэта больш чым інтэрфейс. Кожная каманда ў шэле - гэта культура гіка і носбіт каштоўнасцяў.</p>
+<h4><a href="https://github.com/svetit/2016-postcards-console" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
+		<h3>Як прымяняць</h3>
+		<ul>
+			<li>Паштоўку можна адправіць сябру або сяброўцы</li>
+			<li>Проста павесіць на сваёй сцяне</li>
+			<li>Выкарыстаць, як запрашэнне на гікаўскае мерапрыемства знаёмых або калег.</li>
+		</ul>
+
+		
 
 		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
 
@@ -119,21 +129,34 @@
             <div class="col-lg-12">
                 <h2 class="page-header">Можа зацікавіць</h2>
             </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/750x500" alt="">
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+			<h3><a href="product-8.html">Сумкі Creative Commons</a></h3>
+                </div>
+                <a href="product-8.html">
+                    <img class="img-responsive" src="images/products/pr8/cc_sumki_5.jpg" alt="">
                 </a>
             </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/750x500" alt="">
+
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+ 			<h3><a href="product-2.html">Вікі-паштоўкі</a></h3>
+                </div>
+                <a href="product-2.html">
+                    <img class="img-responsive" src="http://placehold.it/750x500" alt="">
                 </a>
             </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/750x500" alt="">
+
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">                               
+                   <h3><a href="product-5.html">Налепкі для гікаў</a></h3>
+                </div>                
+
+                <a href="product-5.html">
+                    <img class="img-responsive" src="http://placehold.it/750x500" alt="">
                 </a>
-            </div>           
+            </div>  
+
         </div>
         <!-- /.row -->
 
