--- a/product-2.html
+++ b/product-2.html
@@ -96,9 +96,15 @@
             </div>
 
             <div class="col-md-4">
-
-                <p>Паштоўкі з выявамі Беларусі, зробленыя супольнасцю вікіпедыстаў. Добры падарунак сваякам, сябрам з розных гарадоў і мястэчак, а таксама замежжа.</p>
+		<h3>Гісторыя і апісанне</h3>
+                <p>Паштоўкі з выявамі Беларусі, зробленыя супольнасцю вікіпедыстаў. Падчас розных конкурсаў, якія ладзяць супольнасць.  Добры падарунак сваякам, сябрам з розных гарадоў і мястэчак, а таксама замежжа.</p>		
 		<h4><a href="https://github.com/svetit/2016-postcards-wiki-commons" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
+		<h3>Як прымяняць</h3>
+		<ul>
+			<li>Адпраўце тым, хто яшчэ не ведае пра Вікіпедыю або толькі чуў. </li>
+			<li>Або ніколе не наведваў Беларусь. Хай памацаюць!</li>
+			<li>Так не чакайце свята, проста адпраўляйце іх сёння сваім дзядулям, бабулям, цеткам, дзядзькам.  Дарыце ім больш гікаўскай культуры.</li>
+		</ul>
 
 		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
 
@@ -116,24 +122,36 @@
 
 
  <div class="row">
-            <div class="col-lg-12">
+           <div class="col-lg-12">
                 <h2 class="page-header">Можа зацікавіць</h2>
             </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/750x500" alt="">
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+			<h3><a href="product-8.html">Сумкі Creative Commons</a></h3>
+                </div>
+                <a href="product-8.html">
+                    <img class="img-responsive" src="images/products/pr8/cc_sumki_5.jpg" alt="">
                 </a>
             </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/750x500" alt="">
+
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+ 			<h3><a href="product-2.html">Вікі-паштоўкі</a></h3>
+                </div>
+                <a href="product-2.html">
+                    <img class="img-responsive" src="http://placehold.it/750x500" alt="">
                 </a>
             </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/750x500" alt="">
+
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">                               
+                   <h3><a href="product-5.html">Налепкі для гікаў</a></h3>
+                </div>                
+
+                <a href="product-5.html">
+                    <img class="img-responsive" src="http://placehold.it/750x500" alt="">
                 </a>
-            </div>           
+            </div>       
         </div>
         <!-- /.row -->
 
