--- a/product-3.html
+++ b/product-3.html
@@ -97,10 +97,16 @@
             </div>
 
             <div class="col-md-4">
-
-                <p>Клёвыя паштоўкі ў падарунак гіку і гічке на беларускай мове.</p>
+		<h3>Гісторыя і апісанне</h3>
+                <p>Клёвыя паштоўкі ў падарунак гіку і гічке/гікаўне на беларускай мове.</p>
+		<p>Гэтыя паштоўкі адлюстроўваюць думкі гікаў. Як бачым, гэта сур'ёзныя пытанні для ўсяго грамадства.</p>
 		<h4><a href="https://github.com/svetit/2016-postcards-brand-experiment" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
-
+		<h3>Як прымяняць</h3>
+		<ul>
+			<li>Здзівіце сваю сяброўку або сябрука</li>
+			<li>Перадайце проста у рукі пры сустрэчы растлумачыўшы, чаму вам мэсыдж паштоўкі важны.</li>
+			<li>Зладзьце сярод знаёмых конкурс або віктарыну і падарце лепшым такія пашкоўкі.</li>
+		</ul>
 		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
 
             </div>
@@ -120,21 +126,33 @@
             <div class="col-lg-12">
                 <h2 class="page-header">Можа зацікавіць</h2>
             </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/750x500" alt="">
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+			<h3><a href="product-8.html">Сумкі Creative Commons</a></h3>
+                </div>
+                <a href="product-8.html">
+                    <img class="img-responsive" src="images/products/pr8/cc_sumki_5.jpg" alt="">
                 </a>
             </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/750x500" alt="">
+
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+ 			<h3><a href="product-2.html">Вікі-паштоўкі</a></h3>
+                </div>
+                <a href="product-2.html">
+                    <img class="img-responsive" src="http://placehold.it/750x500" alt="">
                 </a>
             </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/750x500" alt="">
+
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">                               
+                   <h3><a href="product-5.html">Налепкі для гікаў</a></h3>
+                </div>                
+
+                <a href="product-5.html">
+                    <img class="img-responsive" src="http://placehold.it/750x500" alt="">
                 </a>
-            </div>           
+            </div>    
         </div>
         <!-- /.row -->
 
@@ -258,4 +276,8 @@
 
 </body>
 
-</html>
+</html>		<ul>
+			<li>Здзівіце сваю сяброўку або сябрука</li>
+			<li>Перадайце проста у рукі пры сустрэчы растлумачыўшы, чаму вам мэсыдж паштоўкі важны.</li>
+			<li>Зладзьце сярод знаёмых конкурс або віктарыну і падарце лепшым такія пашкоўкі.</li>
+		</ul>
