--- a/product-4.html
+++ b/product-4.html
@@ -96,10 +96,16 @@
             </div>
 
             <div class="col-md-4">
-
+		<h3>Гісторыя і апісанне</h3>
                 <p>Налепкі-канструктар з выявамі ліцэнзіі Creative Commons на беларускай мове.</p>
+		<p>Гэты канструктар дае магчымасць лёгка растлумачыць усе віды ліцэнзіяў Creative Commons, а таскама прыцягнуць увагу да вашай індывідуальнасці</p>
 		<h4><a href="https://github.com/TastyCreativity/visual_art/tree/master/nalepki_2" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
-
+		<h3>Як прымяняць</h3>
+		<ul>
+			<li>Наляпіце на свой ноўтбук, ровар, мабільнік, тэчку з дакументамі або іншыя рэчы</li>
+			<li>Зрабіце з іх магніцікі</li>
+			<li>Падарыце сябрам, якія займаюцца творчасцю.</li>
+		</ul>
 		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
             </div>
 
@@ -118,21 +124,34 @@
             <div class="col-lg-12">
                 <h2 class="page-header">Можа зацікавіць</h2>
             </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/750x500" alt="">
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+			<h3><a href="product-8.html">Сумкі Creative Commons</a></h3>
+                </div>
+                <a href="product-8.html">
+                    <img class="img-responsive" src="images/products/pr8/cc_sumki_5.jpg" alt="">
                 </a>
             </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/750x500" alt="">
+
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+ 			<h3><a href="product-2.html">Вікі-паштоўкі</a></h3>
+                </div>
+                <a href="product-2.html">
+                    <img class="img-responsive" src="http://placehold.it/750x500" alt="">
                 </a>
             </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/750x500" alt="">
+
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">                               
+                   <h3><a href="product-5.html">Налепкі для гікаў</a></h3>
+                </div>                
+
+                <a href="product-5.html">
+                    <img class="img-responsive" src="http://placehold.it/750x500" alt="">
                 </a>
-            </div>           
+            </div>  
+  
         </div>
         <!-- /.row -->
 
