--- a/product-5.html
+++ b/product-5.html
@@ -97,10 +97,17 @@
             </div>
 
             <div class="col-md-4">
-
+		<h3>Гісторыя і апісанне</h3>
                 <p>Налепкі, якія раскрываюць каштоўнасці гіка, для аматараў git.</p>
+		<p>Слова гік і гіт вельмі сугучныя. git - гэта тэхналогія кантроля версіяў кода, які ствараецца супольнасцб праграмістаў. Але git можа быць прыменены і для графічных, і тэкставых і іншых файлаў.</p>
+		<p>Другое слова на налепцы, значыць, дзеянне гіка. Напрыклад, commit - гэта ўлучэнне кода ў рэпазіторый, а таксама магчымае пацверджаннне абавязку перад супольнасцю або камандай кодзераў.</p>
 		<h4><a href="https://github.com/diglabby/design/tree/master/sticker/stickers-2" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
-
+		<h3>Як прымяняць</h3>
+		<ul>
+			<li>Наляпіце на свой ноўтбук, ровар, мабільнік, тэчку з дакументамі або іншыя рэчы</li>
+			<li>Зрабіце з іх магніцікі</li>
+			<li>Вывучайце каманды гіта такім чынам.</li>
+		</ul>
 		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
             </div>
 
@@ -116,24 +123,38 @@
 
 
  <div class="row">
-            <div class="col-lg-12">
+	    <div class="col-lg-12">
                 <h2 class="page-header">Можа зацікавіць</h2>
             </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/750x500" alt="">
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+			<h3><a href="product-8.html">Сумкі Creative Commons</a></h3>
+                </div>
+                <a href="product-8.html">
+                    <img class="img-responsive" src="images/products/pr8/cc_sumki_5.jpg" alt="">
                 </a>
             </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/750x500" alt="">
+
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+ 			<h3><a href="product-2.html">Вікі-паштоўкі</a></h3>
+                </div>
+                <a href="product-2.html">
+                    <img class="img-responsive" src="http://placehold.it/750x500" alt="">
                 </a>
             </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/750x500" alt="">
+
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">                               
+                   <h3><a href="product-5.html">Налепкі для гікаў</a></h3>
+                </div>                
+
+                <a href="product-5.html">
+                    <img class="img-responsive" src="http://placehold.it/750x500" alt="">
                 </a>
-            </div>           
+            </div>  
+
+          
         </div>
         <!-- /.row -->
 
