--- a/product-6.html
+++ b/product-6.html
@@ -97,10 +97,16 @@
             </div>
 
             <div class="col-md-4">
-
+		<h3>Гісторыя і апісанне</h3>
                 <p>Налепкі для адмінаў, сецівікоў і супольнасці за аўтаномны, незалежны інтэрнэт.</p>
+		<p>Яны ствараліся падчас нашых пілотных хапускаў мэш сеткі ў 2015 годзе. Але і зараз пасланне сугучны з каштоўнасямі якія нясуць дэцэнтралізаваныя тэхналогіі.</p>
 		<h4><a href="https://github.com/beMesh/stickers/tree/master/1" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
-
+		<h3>Як прымяняць</h3>
+		<ul>
+			<li>Наляпіце на свой ноўтбук, ровар, мабільнік, тэчку з дакументамі або іншыя рэчы</li>
+			<li>Зрабіце з іх магніцікі</li>
+			<li>Падарыце сябрам, якія наладжваюць сеткі, адміняць сервакі, або любяць перастаўляць сістэмы.</li>
+		</ul>
 		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
             </div>
 
@@ -116,24 +122,39 @@
 
 
  <div class="row">
-            <div class="col-lg-12">
+
+	<div class="col-lg-12">
                 <h2 class="page-header">Можа зацікавіць</h2>
             </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/750x500" alt="">
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+			<h3><a href="product-8.html">Сумкі Creative Commons</a></h3>
+                </div>
+                <a href="product-8.html">
+                    <img class="img-responsive" src="images/products/pr8/cc_sumki_5.jpg" alt="">
                 </a>
             </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/750x500" alt="">
+
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+ 			<h3><a href="product-2.html">Вікі-паштоўкі</a></h3>
+                </div>
+                <a href="product-2.html">
+                    <img class="img-responsive" src="http://placehold.it/750x500" alt="">
                 </a>
             </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/750x500" alt="">
+
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">                               
+                   <h3><a href="product-5.html">Налепкі для гікаў</a></h3>
+                </div>                
+
+                <a href="product-5.html">
+                    <img class="img-responsive" src="http://placehold.it/750x500" alt="">
                 </a>
-            </div>           
+            </div>              
+
+
         </div>
         <!-- /.row -->
 
