--- a/product-8.html
+++ b/product-8.html
@@ -97,10 +97,15 @@
             </div>
 
             <div class="col-md-4">
-
+		<h3>Гісторыя і апісанне</h3>
                 <p>Класныя джутавыя гарадскія сумачкі для гіка з трафарэтамі ліцэнзій Creative Commons. З такімі сумачкамі можна хадзіць у краму, або проста пераносіць невялікія рэчы. Маем 4 розных колеры з надпісамі: "Хай будзе!", "За так", "Паўтарай!", "Не чапай!", "Спасылайся!"</p>
 		<h4><a href="https://github.com/svetit/2016-postcards-console" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
-
+		<h3>Як прымяняць</h3>
+		<ul>
+			<li>Хадзіць за прадуктамі</li>
+			<li>Пераносіць невялікія рэчы</li>
+			<li>Падарыце вашым сябрам, якія займаюцца творчай дзейнасцю.</li>
+		</ul>
 		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
 
             </div>
@@ -117,24 +122,36 @@
 
 
  <div class="row">
-            <div class="col-lg-12">
+           <div class="col-lg-12">
                 <h2 class="page-header">Можа зацікавіць</h2>
             </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/750x500" alt="">
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+			<h3><a href="product-8.html">Сумкі Creative Commons</a></h3>
+                </div>
+                <a href="product-8.html">
+                    <img class="img-responsive" src="images/products/pr8/cc_sumki_5.jpg" alt="">
                 </a>
             </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/750x500" alt="">
+
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+ 			<h3><a href="product-2.html">Вікі-паштоўкі</a></h3>
+                </div>
+                <a href="product-2.html">
+                    <img class="img-responsive" src="http://placehold.it/750x500" alt="">
                 </a>
             </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/750x500" alt="">
+
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">                               
+                   <h3><a href="product-5.html">Налепкі для гікаў</a></h3>
+                </div>                
+
+                <a href="product-5.html">
+                    <img class="img-responsive" src="http://placehold.it/750x500" alt="">
                 </a>
-            </div>           
+            </div>  
         </div>
         <!-- /.row -->
 
