--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 </div>                
 
                 <a href="product-2.html">
-                    <img class="img-responsive" src="http://placehold.it/750x500" alt="">
+                    <img class="img-responsive" src="images/products/pr7/rovar_5.jpg" alt="">
                 </a>
 
             </div>
@@ -163,7 +163,7 @@
                 </div>                
 
                 <a href="product-3.html">
-                    <img class="img-responsive" src="http://placehold.it/750x500" alt="">
+                    <img class="img-responsive" src="images/products/pr4/cc_nalepki_3.JPG" alt="">
                 </a>
 
             </div>
