--- a/product-4.html
+++ b/product-4.html
@@ -90,9 +90,9 @@
         <div class="row">
 
             <div class="col-md-8">
-                <p><img class="img-responsive" src="http://placehold.it/750x500" alt=""></p>
-		<p><img class="img-responsive" src="http://placehold.it/750x500" alt=""></p>
-		<p><img class="img-responsive" src="http://placehold.it/750x500" alt=""></p>
+                <p><img class="img-responsive" src="images/products/pr4/cc_nalepki_1.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr4/cc_nalepki_2.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr4/cc_nalepki_4.JPG" alt=""></p>
             </div>
 
             <div class="col-md-4">
