--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <div class="col-md-4 portfolio-item">
 		<div class="caption">
                                 <h3 class="pull-right">3 р</h3>
-                                <h3><a href="product-4.html">Налепкі для Твочасці</a>
+                                <h3><a href="product-4.html">Налепкі для Творчасці</a>
                                 </h3>
                 </div>                
 
