--- a/product-4.html
+++ b/product-4.html
@@ -78,7 +78,7 @@
             <div class="col-lg-12">
 <div class="caption-product">
 		<h1 class="pull-right">3 руб.</h1>
-                <h1 class="page-header">Налепкі для Смачнай Твочасці
+                <h1 class="page-header">Налепкі для Смачнай Творчасці
 		<small>камплект 6 штук</small>
                 </h1>
 </div>
