--- a/product-5.html
+++ b/product-5.html
@@ -91,9 +91,9 @@
         <div class="row">
 
             <div class="col-md-8">
-                <p><img class="img-responsive" src="http://placehold.it/750x500" alt=""></p>
-		<p><img class="img-responsive" src="http://placehold.it/750x500" alt=""></p>
-		<p><img class="img-responsive" src="http://placehold.it/750x500" alt=""></p>
+                <p><img class="img-responsive" src="images/products/pr5/geek_commit_1.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr5/geek_commit_3.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr5/geek_commit_4.JPG" alt=""></p>
             </div>
 
             <div class="col-md-4">
