--- a/product-1.html
+++ b/product-1.html
@@ -77,9 +77,9 @@
         <div class="row">
             <div class="col-lg-12">
 <div class="caption-product">
-		<h1 class="pull-right">10 руб.</h1>
+		<h1 class="pull-right">7 руб.</h1>
                 <h1 class="page-header">Кансольныя паштоўкі 
-
+		<small>камплект 7 штук</small>
                 </h1>
 </div>
             </div>
@@ -90,9 +90,10 @@
         <div class="row">
 
             <div class="col-md-8">
-                <p><img class="img-responsive" src="http://placehold.it/750x500" alt=""></p>
-		<p><img class="img-responsive" src="http://placehold.it/750x500" alt=""></p>
-		<p><img class="img-responsive" src="http://placehold.it/750x500" alt=""></p>
+                <p><img class="img-responsive" src="images/products/pr1/console_post_1.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr1/console_post_4.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr1/console_post_2.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr1/console_post_3.JPG" alt=""></p>
             </div>
 
             <div class="col-md-4">
