product more blocks

--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
 <br />каманда Гік-лаўкі</p>
             </div>
             <div class="col-md-6">
-                <img class="img-responsive" src="http://placehold.it/700x450" alt="">
+                <img class="img-responsive" src="images/geek_lauka_loga_about.png" alt="">
             </div>
         </div>
         <!-- /.row -->
