--- a/product-7.html
+++ b/product-7.html
@@ -121,8 +121,8 @@
 
 
  <div class="row">
-         
-	<div class="col-lg-12">
+     <div class="row">
+            <div class="col-lg-12">
                 <h2 class="page-header">Можа зацікавіць</h2>
             </div>
             <div class="col-md-4 portfolio-item">
@@ -139,7 +139,7 @@
  			<h3><a href="product-2.html">Вікі-паштоўкі</a></h3>
                 </div>
                 <a href="product-2.html">
-                    <img class="img-responsive" src="http://placehold.it/750x500" alt="">
+                    <img class="img-responsive" src="images/products/pr2/wiki_post_1.JPG" alt="">
                 </a>
             </div>
 
@@ -149,13 +149,12 @@
                 </div>                
 
                 <a href="product-5.html">
-                    <img class="img-responsive" src="http://placehold.it/750x500" alt="">
+                    <img class="img-responsive" src="images/products/pr5/geek_commit_2.JPG" alt="">
                 </a>
             </div>  
 
         </div>
         <!-- /.row -->
-
 
 
 
