--- a/product-1.html
+++ b/product-1.html
@@ -144,7 +144,7 @@
  			<h3><a href="product-2.html">Вікі-паштоўкі</a></h3>
                 </div>
                 <a href="product-2.html">
-                    <img class="img-responsive" src="http://placehold.it/750x500" alt="">
+                    <img class="img-responsive" src="images/products/pr2/wiki_post_1.JPG" alt="">
                 </a>
             </div>
 
@@ -154,7 +154,7 @@
                 </div>                
 
                 <a href="product-5.html">
-                    <img class="img-responsive" src="http://placehold.it/750x500" alt="">
+                    <img class="img-responsive" src="images/products/pr5/geek_commit_2.JPG" alt="">
                 </a>
             </div>  
 
