--- a/product-2.html
+++ b/product-2.html
@@ -127,29 +127,29 @@
             </div>
             <div class="col-md-4 portfolio-item">
 		<div class="caption">
-			<h3><a href="product-8.html">Сумкі Creative Commons</a></h3>
+			<h3><a href="product-1.html">Кансольныя паштоўкі</a></h3>
                 </div>
-                <a href="product-8.html">
-                    <img class="img-responsive" src="images/products/pr8/cc_sumki_5.jpg" alt="">
+                <a href="product-1.html">
+                    <img class="img-responsive" src="images/products/pr1/console_post_5.JPG" alt="">
                 </a>
             </div>
 
             <div class="col-md-4 portfolio-item">
 		<div class="caption">
- 			<h3><a href="product-2.html">Вікі-паштоўкі</a></h3>
+ 			<h3><a href="product-7.html">Роварныя налепкі</a></h3>
                 </div>
-                <a href="product-2.html">
-                    <img class="img-responsive" src="http://placehold.it/750x500" alt="">
+                <a href="product-7.html">
+                    <img class="img-responsive" src="images/products/pr7/rovar_5.jpg" alt="">
                 </a>
             </div>
 
             <div class="col-md-4 portfolio-item">
 		<div class="caption">                               
-                   <h3><a href="product-5.html">Налепкі для гікаў</a></h3>
+                   <h3><a href="product-4.html">Налепкі для Творчасці</a></h3>
                 </div>                
 
-                <a href="product-5.html">
-                    <img class="img-responsive" src="http://placehold.it/750x500" alt="">
+                <a href="product-4.html">
+                    <img class="img-responsive" src="images/products/pr4/cc_nalepki_3.JPG" alt="">
                 </a>
             </div>       
         </div>
