--- a/about.html
+++ b/about.html
@@ -83,7 +83,8 @@
                 <h2 class="page-header">Пра нас</h2>
             </div>
             <div class="col-md-6">               
-                <p>Мы - гік-лаўка! Калі вы штосці замаўляеце у нас, магчыма вы ведаеце, што гэта не наш <a href="https://falanster.by" target="_blank">асноўны занятак</a>. Прыбытак лаўкі ідзе на падтрыманне дзейнасці Фаланстэра. Калі ласка насалоджвайцеся нашымі няшнымі прадуктамі і часам вяртайцеся за навінкамі ў гік-лаўку.
+                <p>Мы - гік-лаўка! Калі вы штосці замаўляеце ў нас, магчыма вы ведаеце, што гэта не наш <a href="https://falanster.by" target="_blank">асноўны занятак</a>. Прыбытак лаўкі ідзе на падтрыманне дзейнасці Фаланстэра.</p> 
+<p>Калі ласка насалоджвайцеся нашымі няшнымі прадуктамі і часам вяртайцеся за навінкамі ў гік-лаўку.</p>
 <p>
 Увесь асартымент магчыма зрабіць самастойна, скачаўшы зыходнікі з гітхаба, і праявіўшы трохі знаходлівасці. Або проста замаўляйце гікаўскую атрыбутыку прама зараз.</p>
 <p>
