--- a/tos.html
+++ b/tos.html
@@ -97,7 +97,8 @@
 
 <h3 id="faq">Правілы</h3>
 
-<p>Мы хочам шчаслівых спажыўцоў. Калі вы лічыце што нешта вам не падыходзіць мы гатовы памяняць на іншы. Толькі зкантактуйцеся з намі, і мы дапаможам вырашыць сітуацыю.</p>
+<p>Мы хочам шчаслівых спажыўцоў.</p> 
+<p>Калі вы лічыце, што нешта вам не падыходзіць, мы гатовы памяняць тавар на іншы. Толькі зкантактуйцеся з намі, і мы дапаможам вырашыць сітуацыю.</p>
 
 <h3>Частыя пытанні</h3>
 
