--- a/product-3.html
+++ b/product-3.html
@@ -128,7 +128,7 @@
             </div>
             <div class="col-md-4 portfolio-item">
 		<div class="caption">
-			<h3><a href="product-8.html">Сумкі Creative Commons</a></h3>
+			<h3><a href="product-8.html">Торбы Creative Commons</a></h3>
                 </div>
                 <a href="product-8.html">
                     <img class="img-responsive" src="images/products/pr8/cc_sumki_5.jpg" alt="">
