--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 <div class="col-md-4 portfolio-item">
 		<div class="caption">
                                 <h3 class="pull-right">12 р</h3>
-                                <h3><a href="product-8.html">Сумкі Creative Commons</a>
+                                <h3><a href="product-8.html">Торбы Creative Commons</a>
                                 </h3>
                 </div>                
 
