--- a/product-8.html
+++ b/product-8.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Сумачкі гарадскія, для прадуктаў, сумкі, з натуральнай тканіны, джут">
 
-    <title>Гік-лаўка - Сумкі Creative Commons</title>
+    <title>Гік-лаўка - Торбы Creative Commons</title>
     <link rel="shortcut icon" type="image/png" href="images/geek_lauka_favicon.png"/>
 
     <!-- Bootstrap Core CSS -->
@@ -78,7 +78,7 @@
             <div class="col-lg-12">
 <div class="caption-product">
 		<h1 class="pull-right">12 руб.</h1>
-                <h1 class="page-header">Сумкі Creative Commons
+                <h1 class="page-header">Торба Creative Commons
 
                 </h1>
 </div>
