fixed portion of stickes everywhere

--- a/product-8.html
+++ b/product-8.html
@@ -79,7 +79,7 @@
 <div class="caption-product">
 		<h1 class="pull-right">12 руб.</h1>
                 <h1 class="page-header">Торба Creative Commons
-
+		<small>Адна штука</small>
                 </h1>
 </div>
             </div>
