--- a/product-6.html
+++ b/product-6.html
@@ -80,7 +80,7 @@
 <div class="caption-product">
 		<h1 class="pull-right">5 руб.</h1>
                 <h1 class="page-header">Мэш-налепкі 
-
+		<small>камплект 10 штук</small>
                 </h1>
 </div>
             </div>
