edited text and maded more user friendly

--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,14 @@
                  <div class="col-lg-8 col-lg-offset-2">
 		<p>Калі вы хочаце:</p>
 <ul>
-<li><strong>Замовіць тавар.</strong> Пазначце (1) назву тавару, (2) кошт, (3) колькасць (4) і ваш кантакт, а таксама (5) адрас, калі вы чакаеце тавар па пошце. Падрабязней чытайце на старонцы <a href="tos.html" target="_blank">правілаў</a>.</li>
+<li><strong>Замовіць тавар.</strong>Прыклад:
+<ol> 
+  <li>Назва тавару: Налепкі для творчасці</li>, 
+  <li>Кошт: аднаго камплекта 3 рублі</li>, 
+  <li>Колькасць: 2 камплекты</li> 
+  <li>Кантакт: тэлефон +375 111 111111, г. Пінск, індэкс 222222, Першая вуліца, дом 1, кватэра 1, Біту Мегабатавічу</li>, 
+<ol>
+Падрабязней чытайце <a href="tos.html" target="_blank">як мы працуем</a>.</li>
 <li><strong>Адправіць паведамленне.</strong> Проста напішыце паведамленне</li>
 </ul>
 
@@ -162,7 +169,7 @@
                         <a class="page-scroll" href="about.html">Пра нас</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="tos.html#faq">FAQ</a>
+                        <a class="page-scroll" href="tos.html#faq">Як мы працуем</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="tos.html#rule">Правілы сайта</a>
