--- a/product-4.html
+++ b/product-4.html
@@ -239,7 +239,7 @@
                         <a class="page-scroll" href="about.html">Пра нас</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="tos.html#faq">FAQ</a>
+                        <a class="page-scroll" href="tos.html#Як мы працуем">Як мы працуем</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="tos.html#rule">Правілы сайта</a>
