--- a/tos.html
+++ b/tos.html
@@ -116,7 +116,7 @@
         <li>Абірайце тавары.</li>
         <li>Праз форму <a href="contact.html" target="_blank">"Звязацца з намі"</a> адпраўляеце сваю замову.</li>
         <li>Мы звяжамся з вамі і пацвердзім наяўнасць і замову з улікам дастаўкі поштай.</li>
-        <li>Вы робіце аплату на рахунак такі-та.</li>
+        <li>Вы робіце аплату на рахунак будзе дададзены як мы пачнем поўную працу (пройдзем краўдфандынг на замоваў на 100 рублёў).</li>
         <li>Як толькі мы атрымліваем аплату, штотыдзень, у чацвер адпраўляем праз белпошту па абазначанаму вамі адрасу.</li>
 </ol>
 
@@ -127,11 +127,13 @@
 </ol>
 
 <h4>Колькі каштуе дастаўка па Беларусі?</h4>
-
+<p>Мы карыстаемся паслугамі <a href="http://www.belpost.by/tariff/belarus/yurrlica/" target="_blank">Белпошта</a> Кошты мы публікуем ніжэй:</p>
 <ul>
         <li>да 100 гр. - 2 рублі</li>
 	<li>да 200 гр. - 3 рублі</li>
+	<li>да 300 гр. - 4 рублі</li>
 </ul>
+<p>Мы таксама прапануем хуткую дастаўку па Мінску (2-3 дні), якая будзе каштаваць 4 рублі.</p>
 
 <h4>Як аформіць замову?</h4>
 <p>У поле "Паведамленне" на старонцы <a href="contact.html" target="_blank">"Звязацца з намі"</a> пазначце наступныя звесткі:</p>
@@ -148,7 +150,7 @@
 
             </div>
             <div class="col-md-6">
-                <img class="img-responsive" src="http://placehold.it/700x450" alt="">
+                <img class="img-responsive" src="images/how-we-work.jpg" alt="">
             </div>
         </div>
         <!-- /.row -->
@@ -242,7 +244,7 @@
                         <a class="page-scroll" href="about.html">Пра нас</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="tos.html#faq">FAQ</a>
+                        <a class="page-scroll" href="tos.html#faq">Як мы працуем</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="tos.html#rule">Правілы сайта</a>
