--- a/product-3.html
+++ b/product-3.html
@@ -244,7 +244,7 @@
                         <a class="page-scroll" href="about.html">Пра нас</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="tos.html#faq">FAQ</a>
+                        <a class="page-scroll" href="tos.html#Як мы працуем">Як мы працуем</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="tos.html#rule">Правілы сайта</a>
