edited text and maded more user friendly

--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
   <li>Назва тавару: Налепкі для творчасці</li>, 
   <li>Кошт: аднаго камплекта 3 рублі</li>, 
   <li>Колькасць: 2 камплекты</li> 
-  <li>Кантакт: тэлефон +375 111 111111, г. Пінск, індэкс 222222, Першая вуліца, дом 1, кватэра 1, Біту Мегабатавічу</li>, 
+  <li>Кантакт: тэлефон +375 111 111111, г. Пінск, індэкс 222222, Першая вуліца, дом 1, кватэра 1, Біту Мегабатавічу</li> 
 </ol>
 Падрабязней чытайце <a href="tos.html" target="_blank">як мы працуем</a>.</li>
 <li><strong>Адправіць паведамленне.</strong> Проста напішыце паведамленне</li>
