--- a/contact.html
+++ b/contact.html
@@ -88,8 +88,8 @@
 <ul>
 <li><strong>Замовіць тавар.</strong> Прыклад:
 <ol> 
-  <li>Назва тавару: Налепкі для творчасці</li>, 
-  <li>Кошт: аднаго камплекта 3 рублі</li>, 
+  <li>Назва тавару: Налепкі для творчасці</li>
+  <li>Кошт: аднаго камплекта 3 рублі</li>
   <li>Колькасць: 2 камплекты</li> 
   <li>Кантакт: тэлефон +375 111 111111, г. Пінск, індэкс 222222, Першая вуліца, дом 1, кватэра 1, Біту Мегабатавічу</li> 
 </ol>
