fixed description and rules

--- a/product-1.html
+++ b/product-1.html
@@ -79,7 +79,7 @@
 <div class="caption-product">
 		<h1 class="pull-right">7 руб.</h1>
                 <h1 class="page-header">Кансольныя паштоўкі 
-		<small>камплект 7 штук</small>
+		<small  class="col-lg-12">кошт за камплект (7 штук)</small>
                 </h1>
 </div>
             </div>
@@ -110,7 +110,7 @@
 		</ul>
 
 		
-
+		<p>* Замовіць тавар можна праз кантактную форму </p>
 		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
 
             </div>
