--- a/product-2.html
+++ b/product-2.html
@@ -79,7 +79,7 @@
 <div class="caption-product">
 		<h1 class="pull-right">10 руб.</h1>
                 <h1 class="page-header">Вікі-паштоўкі 
-		<small>камплект 10 штук</small>
+		<small>кошт за камплект (10 штук)</small>
                 </h1>
 </div>
             </div>
