--- a/product-7.html
+++ b/product-7.html
@@ -79,7 +79,7 @@
 <div class="caption-product">
 		<h1 class="pull-right">4 руб.</h1>
                 <h1 class="page-header">Роварныя налепкі
-		<small>камплект 6 штук</small>
+		<small>кошт за камплект (6 штук)</small>
                 </h1>
 </div>
             </div>
