--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
 <ul>
 <li><strong>Замовіць тавар.</strong> Прыклад:
 <ol> 
-  <li>Назва тавару: Налепкі для творчасці</li>
+  <li>Назва тавару: Налепкі для творчасці (Камплект 2)</li>
   <li>Кошт: аднаго камплекта 3 рублі</li>
   <li>Колькасць: 2 камплекты</li> 
   <li>Кантакт: г. Пінск, індэкс 222222, Першая вуліца, дом 1, кватэра 1</li> 
