--- a/index.html
+++ b/index.html
@@ -94,15 +94,15 @@
             <div class="row">
                 <div class="col-lg-12">
 
-			<h2 class="page-header">Для пачатку працы гік-лаўкі збіраем прадзамовы на 100 рублёў</h2>
-
+			<h2 class="page-header">Збіраем заказы на 100 рублёў</h2>
+			<p>Калі сумма ўсіх заказаў будзе раўна 100+ рублёў, выконваем іх. І лаўка адкрываецца.</p>
 			<div class="caption">
 						        <h3 class="pull-right">100 рублёў</h3>
 						        <h3>Замаўляй нішцякі!</h3>
 					</div>  
 			<div class="progress">
 			  <div class="progress-bar progress-bar-success" role="progressbar" style="width: 27%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-				Замоўлена на 27 рублёў. Паднажмем!
+				Замоўлена на 19 рублёў. Паднажмем!
 			  </div>
 			</div>
                 </div>
