--- a/product-3.html
+++ b/product-3.html
@@ -80,7 +80,7 @@
 <div class="caption-product">
 		<h1 class="pull-right">10 руб.</h1>
                 <h1 class="page-header">Эксперыментальныя паштоўкі 
-		<small>камплект 10 штук</small>
+		<small>кошт за камплект (10 штук)</small>
                 </h1>
 </div>
             </div>
