--- a/product-5.html
+++ b/product-5.html
@@ -80,7 +80,7 @@
 <div class="caption-product">
 		<h1 class="pull-right">2 руб.</h1>
                 <h1 class="page-header">Налепкі для гікаў 
-		<small>класічныя, 6 штук у камплекце</small>
+		<small>класічныя, кошт за камплект (6 штук)</small>
                 </h1>
 </div>
             </div>
