--- a/tos.html
+++ b/tos.html
@@ -108,7 +108,8 @@
 	<li>Праз форму <a href="contact.html" target="_blank">"Звязацца з намі"</a> адпраўляеце сваю замову.</li>
 	<li>Пасля мы звяжамся з вамі і пацвердзім наяўнасць тавараў.</li>
 	<li>Забраць тавар можна па <a href="https://falanster.by/be/kantakt" target="_blank">адрасе</a>. Мінск, вул. Захарава 77а, пам 2б</li>
-	<li>Звычайна мы працуем па панядзелках з 15 да 21, але графік можа змяняцца. Глядзіце <a href="#" target="_blank">наш каляндар</a>.</li>
+	<li>Звычайна мы працуем па аўторках з 17 да 21.</li>
+	<li>Магчыма таксама дастаўка напрацягу 2-3 дзён праз кур'ера, кошт 4 рублі.</li>	
 </ol>
 
 <h4>Як атрымаць тавар праз пошту?</h4>
@@ -149,9 +150,11 @@
 <h4>Як стаць аўтарам?</h4>
 <p>Мы пашыраем каманду лаўкі і гатовы размяшчаць дызайны новых аўтараў. Вось першыя крокі</p>
 <ol>
-        <li>Звязвайцеся з намі. У паведамленні пакіньце спасылку на дызайн.</li>
+        <li><a href="contact.html" target="_blank">Звязвайцеся</a> з намі. У паведамленні пакіньце спасылку на дызайн.</li>
 	<li>Важна ведаць, што нашы аўтары распаўсюджваюць сваю творчасць пад ліцэнзіяй <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">СС BY-SA 4.0</a></li>
 </ol>
+<h4>Засталіся пытанні?</h4> 
+<p>Званіце на <a href="tel:+375298602312">+375 29 8602312</a>.</p>
 
         
 
