--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
                 <div class="col-lg-12">
 
 			<h2 class="page-header">Збіраем заказы на 100 рублёў</h2>
-			<p>Калі сумма ўсіх заказаў будзе раўна 100+ рублёў, выконваем іх. І лаўка адкрываецца.</p>
+			<p>Калі сумма ўсіх замоваў будзе раўна 100+ рублёў. Лаўка адкрываецца на поўныя абароты і выконваюцца ўсе замовы.</p>
 			<div class="caption">
 						        <h3 class="pull-right">100 рублёў</h3>
-						        <h3>Замаўляй нішцякі!</h3>
+						        <h3><a href="#shopping">Замаўляй нішцякі!</a></h3>
 					</div>  
 			<div class="progress">
 			  <div class="progress-bar progress-bar-success" role="progressbar" style="width: 27%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
@@ -115,7 +115,7 @@
     <div class="container">
 
         <!-- Page Header -->
-        <div class="row">
+        <div class="row" id="shopping">
             <div class="col-lg-12">
                 <h2 class="page-header">Асартымент
                     <small>тавараў лаўкі</small>
