--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 			<p>Калі сумма ўсіх замоваў будзе раўна 100+ рублёў. Лаўка адкрываецца на поўныя абароты і выконваюцца ўсе замовы.</p>
 			<div class="caption">
 						        <h3 class="pull-right">100 рублёў</h3>
-						        <h3><a href="#shopping">Замаўляй нішцякі!</a></h3>
+						        <h3>Замаўляй нішцякі!</h3>
 					</div>  
 			<div class="progress">
 			  <div class="progress-bar progress-bar-success" role="progressbar" style="width: 27%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
