sizes to products added, button descrption added

--- a/product-1.html
+++ b/product-1.html
@@ -102,6 +102,8 @@
 		<p>Кансольныя паштоўкі паказваюць, што код і каманды - гэта інтрументы змены свету і перш за ўсё сябе.</p>
 		<p>Уяві, кансоль - гэта больш чым інтэрфейс. Кожная каманда ў шэле - гэта культура гіка і носбіт каштоўнасцяў.</p>
 <h4><a href="https://github.com/svetit/2016-postcards-console" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
+
+		<br>
 		<h3>Як прымяняць</h3>
 		<ul>
 			<li>Паштоўку можна адправіць сябру або сяброўцы</li>
@@ -109,7 +111,8 @@
 			<li>Выкарыстаць, як запрашэнне на гікаўскае мерапрыемства знаёмых або калег.</li>
 		</ul>
 
-		
+		<p> Памер паштоўкі: А5 </p>
+
 		<p>* Замовіць тавар можна праз кантактную форму </p>
 		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
 
