--- a/product-2.html
+++ b/product-2.html
@@ -105,7 +105,10 @@
 			<li>Або ніколе не наведваў Беларусь. Хай памацаюць!</li>
 			<li>Так не чакайце свята, проста адпраўляйце іх сёння сваім дзядулям, бабулям, цеткам, дзядзькам.  Дарыце ім больш гікаўскай культуры.</li>
 		</ul>
+		
+		<p> Памер паштоўкі: А5 </p>
 
+		<p>* Замовіць тавар можна праз кантактную форму </p>
 		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
 
             </div>
