--- a/product-3.html
+++ b/product-3.html
@@ -107,6 +107,10 @@
 			<li>Перадайце проста у рукі пры сустрэчы растлумачыўшы, чаму вам мэсыдж паштоўкі важны.</li>
 			<li>Зладзьце сярод знаёмых конкурс або віктарыну і падарце лепшым такія пашкоўкі.</li>
 		</ul>
+
+		<p> Памер паштоўкі: А5 </p>
+
+		<p>* Замовіць тавар можна праз кантактную форму </p>
 		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
 
             </div>
