--- a/product-4.html
+++ b/product-4.html
@@ -106,6 +106,10 @@
 			<li>Зрабіце з іх магніцікі</li>
 			<li>Падарыце сябрам, якія займаюцца творчасцю.</li>
 		</ul>
+
+		<p> Памер налепкі: 5,5см </p>
+
+		<p>* Замовіць тавар можна праз кантактную форму </p>
 		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
             </div>
 
