--- a/product-5.html
+++ b/product-5.html
@@ -108,6 +108,10 @@
 			<li>Зрабіце з іх магніцікі</li>
 			<li>Вывучайце каманды гіта такім чынам.</li>
 		</ul>
+
+		<p> Шырыня налепкі: 8см </p>
+
+		<p>* Замовіць тавар можна праз кантактную форму </p>
 		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
             </div>
 
