--- a/product-6.html
+++ b/product-6.html
@@ -107,6 +107,9 @@
 			<li>Зрабіце з іх магніцікі</li>
 			<li>Падарыце сябрам, якія наладжваюць сеткі, адміняць сервакі, або любяць перастаўляць сістэмы.</li>
 		</ul>
+		<p> Памер налепкі: 5х5см </p>
+
+		<p>* Замовіць тавар можна праз кантактную форму </p>
 		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
             </div>
 
