--- a/product-7.html
+++ b/product-7.html
@@ -105,6 +105,10 @@
 			<li>Зрабіце з іх магніцікі</li>
 			<li>Падарыце вашым сябрам раварыстам.</li>
 		</ul>
+
+		<p> Шырыня налепкі: 15см </p>
+
+		<p>* Замовіць тавар можна праз кантактную форму </p>
 		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
 
             </div>
