--- a/product-8.html
+++ b/product-8.html
@@ -106,6 +106,8 @@
 			<li>Пераносіць невялікія рэчы</li>
 			<li>Падарыце вашым сябрам, якія займаюцца творчай дзейнасцю.</li>
 		</ul>
+
+		<p>* Замовіць тавар можна праз кантактную форму </p>
 		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
 
             </div>
