Grammar Mistakes fixed

--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
 <li><strong>Замовіць тавар.</strong> Прыклад:
 <ol> 
   <li>Назва тавару: Налепкі для творчасці (Камплект 2)</li>
-  <li>Кошт: аднаго камплекта 3 рублі</li>
+  <li>Кошт аднаго камплекта: 3 рублі</li>
   <li>Колькасць: 2 камплекты</li> 
   <li>Кантакт: г. Пінск, індэкс 222222, Першая вуліца, дом 1, кватэра 1</li> 
 </ol>
