--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <div class="col-lg-12">
 
 			<h2 class="page-header">Збіраем заказы на 100 рублёў</h2>
-			<p>Калі сумма ўсіх замоваў будзе раўна 100+ рублёў. Лаўка адкрываецца на поўныя абароты і выконваюцца ўсе замовы.</p>
+			<p>Калі сума ўсіх замоваў будзе роўная 100+ рублёў, то лаўка адкрываецца на поўныя абароты і выконваюцца ўсе замовы.</p>
 			<div class="caption">
 						        <h3 class="pull-right">100 рублёў</h3>
 						        <h3>Замаўляй нішцякі!</h3>
