--- a/product-7.html
+++ b/product-7.html
@@ -97,12 +97,12 @@
 
             <div class="col-md-4">
 		<h3>Гісторыя і апісанне</h3>
-                <p>Гэтыя налепкі мы стварылі падчас падрыхтоўкі Дапаможніка - раварыста. Яны заклікаюць змяняць правілы. Добра падыходзяць, каб наляпіць на ноўтбук або ровар. Устойлівыя да вільгасці і трымаюцца на корпусе ноўта або роварнай раме.</p>
+                <p>Гэтыя налепкі мы стварылі падчас падрыхтоўкі брашуры "Дапаможнік Раварыста". Яны заклікаюць змяняць правілы. Добра падыходзяць, каб наляпіць на ноўтбук або ровар. Устойлівыя да вільгаці і трымаюцца на корпусе ноўта або роварнай раме.</p>
 		<h4><a href="https://github.com/rovar/dapamozhnik-2-stickers" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
-		<h3>Як прымяняць</h3>
+		<h3>Як прымяняць:</h3>
 		<ul>
-			<li>Наляпіце на свой ровар, сцену або іншыя прыдатныя для гэтага рэчы</li>
-			<li>Зрабіце з іх магніцікі</li>
+			<li>Наляпіце на свой ровар, сцену або іншыя прыдатныя для гэтага рэчы.</li>
+			<li>Зрабіце з іх магніцікі.</li>
 			<li>Падарыце вашым сябрам раварыстам.</li>
 		</ul>
 
