--- a/tos.html
+++ b/tos.html
@@ -98,7 +98,7 @@
 <h3 id="faq">Правілы</h3>
 
 <p>Мы хочам шчаслівых спажыўцоў.</p> 
-<p>Калі вы лічыце, што нешта вам не падыходзіць, мы гатовы памяняць тавар на іншы. Толькі зкантактуйцеся з намі, і мы дапаможам вырашыць сітуацыю.</p>
+<p>Калі вы лічыце, што нешта вам не падыходзіць, мы гатовы памяняць тавар на іншы. Толькі скантактуйцеся з намі, і мы дапаможам вырашыць сітуацыю.</p>
 
 <h3>Частыя пытанні</h3>
 
@@ -107,7 +107,7 @@
         <li>Абірайце тавары.</li>
 	<li>Праз форму <a href="contact.html" target="_blank">"Звязацца з намі"</a> адпраўляеце сваю замову.</li>
 	<li>Пасля мы звяжамся з вамі і пацвердзім наяўнасць тавараў.</li>
-	<li>Забраць тавар можна па <a href="https://falanster.by/be/kantakt" target="_blank">адрасе</a>. Мінск, вул. Захарава 77а, пам 2б</li>
+	<li>Забраць тавар можна па <a href="https://falanster.by/be/kantakt" target="_blank">адрасе</a>: Мінск, вул. Захарава 77а, пам 2б.</li>
 	<li>Звычайна мы працуем па аўторках з 17 да 21.</li>
 	<li>Магчыма таксама дастаўка напрацягу 2-3 дзён праз кур'ера, кошт 4 рублі.</li>	
 </ol>
@@ -117,18 +117,18 @@
         <li>Абірайце тавары.</li>
         <li>Праз форму <a href="contact.html" target="_blank">"Звязацца з намі"</a> адпраўляеце сваю замову.</li>
         <li>Мы звяжамся з вамі і пацвердзім наяўнасць і замову з улікам дастаўкі поштай.</li>
-        <li>Вы робіце аплату на рахунак будзе дададзены як мы пачнем поўную працу (пройдзем краўдфандынг на замоваў на 100 рублёў).</li>
+        <li>Вы робіце аплату на рахунак. *Рахунак будзе дададзены, калі мы пачнем поўную працу (завершым краўдфандынг на суму замоваў звыш 100 рублёў).</li>
         <li>Як толькі мы атрымліваем аплату, штотыдзень, у чацвер адпраўляем праз белпошту па абазначанаму вамі адрасу.</li>
 </ol>
 
 <h4>Якія спосабы аплаты вы маеце?</h4>
 <ol>
         <li>Магчыма аплата наяўнымі пры атрыманні тавара,</li>
-        <li>або аллата праз картку пасля удакладанення замовы на пошце.</li>
+        <li>або аллата праз картку пасля ўдакладанення замовы на пошце.</li>
 </ol>
 
 <h4>Колькі каштуе дастаўка па Беларусі?</h4>
-<p>Мы карыстаемся паслугамі <a href="http://www.belpost.by/tariff/belarus/yurrlica/" target="_blank">Белпошта</a> Кошты мы публікуем ніжэй:</p>
+<p>Мы карыстаемся паслугамі <a href="http://www.belpost.by/tariff/belarus/yurrlica/" target="_blank">Белпошты</a> Кошты:</p>
 <ul>
         <li>да 100 гр. - 2 рублі</li>
 	<li>да 200 гр. - 3 рублі</li>
@@ -145,10 +145,10 @@
 </ol>
 
 <h4>Чаму колеры на друкаваных налепках адрозніваюцца ад колераў на макетах?</h4>
-<p>Такое можа здарацца, таму што мы ствараем макеты ў свабодных графічных прыладах, яны збольшага працуюць з RGB гамай, а друк робіцца са CMYK гамы.</p>
+<p>Такое можа здарацца, таму што мы ствараем макеты ў свабодных графічных прыладах, яны збольшага працуюць з RGB-гамай, а друк робіцца са CMYK-гамы.</p>
      
 <h4>Як стаць аўтарам?</h4>
-<p>Мы пашыраем каманду лаўкі і гатовы размяшчаць дызайны новых аўтараў. Вось першыя крокі</p>
+<p>Мы пашыраем каманду лаўкі і гатовы размяшчаць дызайны новых аўтараў. Вось першыя крокі:</p>
 <ol>
         <li><a href="contact.html" target="_blank">Звязвайцеся</a> з намі. У паведамленні пакіньце спасылку на дызайн.</li>
 	<li>Важна ведаць, што нашы аўтары распаўсюджваюць сваю творчасць пад ліцэнзіяй <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">СС BY-SA 4.0</a></li>
