Grammar Mistakes fixed2

--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
 <p>
 Увесь асартымент магчыма зрабіць самастойна, калі скачаць зыходнікі з гітхаба і праявіць трохі знаходлівасці. Або проста замаўляйце гікаўскую атрыбутыку прама зараз.</p>
 <p>
-Не бойцеся! Вы ў харашых руках.</p>
+Не бойцеся! Вы ў харошых руках.</p>
 <p>
 Кахай і гіч,
 <br />каманда Гік-лаўкі</p>
