price fix for mobile

--- a/index.html
+++ b/index.html
@@ -94,15 +94,15 @@
             <div class="row">
                 <div class="col-lg-12">
 
-			<h2 class="page-header">Збіраем заказы на 100 рублёў</h2>
-			<p>Калі сумма ўсіх замоваў будзе раўна 100+ рублёў. Лаўка адкрываецца на поўныя абароты і выконваюцца ўсе замовы.</p>
+			<h2 class="page-header">Збіраем замовы на 100 рублёў</h2>
+			<p>Калі сумма ўсіх замоваў будзе раўна 100+ рублёў. Лаўка адкрываецца на поўныя абароты і выконваюцца ўсе пакупкі.</p>
 			<div class="caption">
 						        <h3 class="pull-right">100 рублёў</h3>
-						        <h3>Замаўляй нішцякі!</h3>
+						        <h3>Замаўляй!</h3>
 					</div>  
 			<div class="progress">
 			  <div class="progress-bar progress-bar-success" role="progressbar" style="width: 27%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-				Замоўлена на 19 рублёў. Паднажмем!
+				19%
 			  </div>
 			</div>
                 </div>
@@ -125,7 +125,7 @@
         <!-- /.row -->
 
         <!-- Projects Row -->
-        <div class="row">
+        <div class="row products">
 
             <div class="col-md-4 portfolio-item">
 		<div class="caption">
@@ -134,9 +134,11 @@
                                 </h3>
                 </div>                
 
-                <a href="product-1.html">
-                    <img class="img-responsive" src="images/products/pr1/console_post_5.JPG" alt="">
-                </a>
+                <div class="img-prod-container">		    
+                    <a href="product-1.html"><img class="img-responsive" src="images/products/pr1/console_post_5.JPG" alt=""></a>
+		  
+		    <div class="text1"><p>7 руб.</p></div>
+                </div>
 
             </div>
 
@@ -150,9 +152,10 @@
                 </div>                
 
 
-                <a href="product-7.html">
-                    <img class="img-responsive" src="images/products/pr7/rovar_5.jpg" alt="">
-                </a>
+                <div class="img-prod-container">
+                    <a href="product-7.html"><img class="img-responsive" src="images/products/pr7/rovar_5.jpg" alt=""></a>
+	            <div class="text1"><p>4 руб.</p></div>
+                </div>
 
             </div>
 
@@ -164,9 +167,10 @@
                 </div>                
 
 
-                <a href="product-4.html">
-                    <img class="img-responsive" src="images/products/pr4/cc_nalepki_3.JPG" alt="">
-                </a>
+                <div class="img-prod-container">
+                    <a href="product-4.html"><img class="img-responsive" src="images/products/pr4/cc_nalepki_3.JPG" alt=""></a>
+		    <div class="text1"><p>3 руб.</p></div>
+                </div>
 
             </div>
 
@@ -174,7 +178,7 @@
         <!-- /.row -->
 
         <!-- Projects Row -->
-        <div class="row">
+        <div class="row products">
             
 
 <div class="col-md-4 portfolio-item">
@@ -184,22 +188,24 @@
                                 </h3>
                 </div>                
 
-                <a href="product-8.html">
-                    <img class="img-responsive" src="images/products/pr8/cc_sumki_5.jpg" alt="">
-                </a>
+                <div class="img-prod-container" href="product-8.html">
+                    <a href="product-8.html"><img class="img-responsive" src="images/products/pr8/cc_sumki_5.jpg" alt=""></a>
+		    <div class="text1"><p>12 руб.</p></div>
+                </div>
 
             </div>
 
             <div class="col-md-4 portfolio-item">
 		<div class="caption">
-                                <h3 class="pull-right">10 руб</h3>
+                                <h3 class="pull-right">10 р</h3>
                                 <h3><a href="product-2.html">Вікі-паштоўкі</a>
                                 </h3>
                 </div>                
 
-                <a href="product-2.html">
-                    <img class="img-responsive" src="images/products/pr2/wiki_post_1.JPG" alt="">
-                </a>
+                <div class="img-prod-container" href="product-2.html">
+                    <a href="product-2.html"><img class="img-responsive" src="images/products/pr2/wiki_post_1.JPG" alt=""></a>
+		    <div class="text1"><p>10 руб.</p></div>
+                </div>
 
             </div>
 
@@ -210,9 +216,10 @@
                                 </h3>
                 </div>                
 
-                <a href="product-5.html">
-                    <img class="img-responsive" src="images/products/pr5/geek_commit_2.JPG" alt="">
-                </a>
+                <div class="img-prod-container" href="product-5.html">
+                    <a href="product-5.html"><img class="img-responsive" src="images/products/pr5/geek_commit_2.JPG" alt=""></a>
+                    <div class="text1"><p>2 руб.</p></div>
+                </div>
 
             </div>
 
